# HyperSand

./: .gitignore  README.md  pyproject.toml
Examples/: 2d.ipynb  3d.ipynb  circle.ipynb  nd.ipynb  sphere.ipynb
hypersand/: __init__.py  montecarlo.py  setup.py
hypersand/hypersand/: __init__.py  generator.py  interpfs.py  montecarlo.py  plot.py
